force-app/main/default/objects/Notification_File__c.object
<CustomObject>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Number_Formular__c</fullName>
        <formula>IF(NOT(ISBLANK(Notification__r.Notification_Number__c)), Notification__r.Notification_Number__c, Notification__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <label>Notification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Notification File</relationshipLabel>
        <relationshipName>Notification_File</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_File_Id__c</fullName>
        <externalId>true</externalId>
        <label>SAP File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_530, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_530)) + File_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url Link</label>
        <type>Text</type>
    </fields>
    <label>Notification File</label>
    <nameField>
        <displayFormat>NF-{0000}</displayFormat>
        <label>Notification File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>